--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.1
+	yarn_mappings=1.18.1+build.18
 	loader_version=0.12.12
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = xanthian
+	archives_base_name = eatalltheeggs
 
 # Dependencies
-	fabric_version=0.44.0+1.18
+	fabric_version=0.45.2+1.18
