--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
 
-# Fabric Properties
-minecraft_version=1.19.1
-yarn_mappings=1.19.1+build.1
-loader_version=0.14.8
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.21
+
+fabric_version=0.86.1+1.20.1
 
 # Mod Properties
-mod_version = 2.01
+mod_version = 3.0
 maven_group = xanthian
 archives_base_name = eatalltheeggs
 
-# Dependencies
-fabric_version=0.58.5+1.19.1
