--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,19 @@
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.14.21
+minecraft_version_range=[1.20,1.21)
+forge_version=47.0.19
+forge_version_range=[47,)
+loader_version_range=[47,)
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
 
-fabric_version=0.86.1+1.20.1
-
-# Mod Properties
-mod_version = 3.0.1
-maven_group = xanthian
-archives_base_name = eatalltheeggs
-
+mod_id=eateggs
+mod_name=Eat All The Eggs
+mod_license=MIT
+mod_version=3.0.1
+mod_group_id=net.xanthian.eatalltheeggs
+mod_authors=Xanthian
+mod_description=Adds more uses for Eggs.
+pack_format_number=15
