--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
 
-minecraft_version=1.20.1
-minecraft_version_range=[1.20,1.21)
-forge_version=47.0.19
-forge_version_range=[47,)
-loader_version_range=[47,)
-mapping_channel=parchment
-mapping_version=2023.09.03-1.20.1
+minecraft_version=1.20.2
+minecraft_version_range=[1.20.2]
+neo_version=20.2.86
+neo_version_range=[20.2,)
+loader_version_range=[1,)
 
 mod_id=eateggs
 mod_name=Eat All The Eggs
@@ -16,4 +15,4 @@ mod_version=3.0.1
 mod_group_id=net.xanthian.eatalltheeggs
 mod_authors=Xanthian
 mod_description=Adds more uses for Eggs.
-pack_format_number=15
+pack_format_number=18
